# Dissonance

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  bot.cpp  bot.hpp  main.cpp
src/: Channel.cpp  Channel.hpp  DMChannel.cpp  DMChannel.hpp  DiscordAPI.cpp  DiscordAPI.hpp  DiscordBot.cpp  DiscordBot.hpp  Dissonance.hpp  Embed.cpp  Embed.hpp  Guild.cpp  Guild.hpp  GuildMember.cpp  GuildMember.hpp  Message.cpp  Message.hpp  RateLimiter.cpp  RateLimiter.hpp  Retrieve.hpp  Role.cpp  Role.hpp  User.cpp  User.hpp
